--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
+  "name": "galvanize-secrets-fs",
+  "version": "1.0.0",
+  "description": "Everybody has secrets, its time to track them in a centralized way. In this project you will create a full-stack application where users will keep their secrets and keep track of who knows them.",
+  "main": "app.js",
   "dependencies": {
     "express": "^4.16.2",
     "hbs": "^4.0.1"
   },
+  "devDependencies": {},
   "scripts": {
-    "start": "node app.js"
-  }
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "script": "node app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BrooksPatton/galvanize-secrets-fs.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BrooksPatton/galvanize-secrets-fs/issues"
+  },
+  "homepage": "https://github.com/BrooksPatton/galvanize-secrets-fs#readme"
 }
